--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-07-11  Riccardo Mottola <rm@gnu.org>
+	* FSNode/FSNBrowserMatrix.[h,m]:
+	mouseFlags has to be NSUInteger coming from NSEvent modifierFlags.
+
 2022-06-29  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserColumn.m
