--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2022-10-06  Riccardo Mottola <rm@gnu.org>
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	* Inspector/ContentViewers/ImageViewer/Resizer.m
+	store Image Path and get it back from the resizer and compare if it is current
+
+2022-10-06  Riccardo Mottola <rm@gnu.org>
 	* Inspector/ContentViewers/AppViewer/AppViewer.m
 	* Inspector/ContentViewers/FolderViewer/FolderViewer.m
 	* Inspector/ContentViewers/IBViewViewer/IBViewViewer.m
@@ -11,6 +16,7 @@
 	* Inspector/ContentViewers/SoundViewer/SoundViewer.m
 	* Inspector/ContentViewersProtocol.h
 	* Inspector/Contents.m
+	remove displayLastPath and simplify, it was forced to NO anyway.
 
 2022-07-12  Riccardo Mottola <rm@gnu.org>
 
