--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-10-06  Riccardo Mottola <rm@gnu.org>
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	Try to handle failure of resized image better.
+
+2022-10-06  Riccardo Mottola <rm@gnu.org>
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
 	* Inspector/ContentViewers/ImageViewer/Resizer.m
 	store Image Path and get it back from the resizer and compare if it is current
 
