--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2024-03-20  Riccardo Mottola <rm@gnu.org>
+	* Inspector/ContentViewers/ImageViewer/Resizer.m:
+	use getPixel/setPixel to handle also 16bpp and non-planar images.
+	A bit slower, but more portable code since it relies on
+	NSBitmapImageRep.
+
 2022-12-22  Riccardo Mottola <rm@gnu.org>
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.m:
