make Open With translatable and add translations or translation stubs

--- a/GWorkspace/Resources/Dutch.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Dutch.lproj/Localizable.strings
@@ -304,6 +304,15 @@
 "Title Width" = "Titelbreedte";
 "Icon View" = "Icoon view";
 
+/* OpenWithController */
+"Open With" = "Open With";
+"Type the name or the path of the application" = "Type the name or the path of the application";
+"to use to open the current selection" = "to use to open the current selection";
+
+/* RunExternalController.m */
+"Run" = "Run";
+"Type the command to execute:"="Type the command to execute:";
+
 /* Recycler strings */
 
 "Recycle: " = "Steek in de prullenmand: ";
