--- a/GWorkspace/Resources/Portuguese.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Portuguese.lproj/Localizable.strings
@@ -309,6 +309,16 @@
 
 
 
+/* OpenWithController */
+"Open With" = "Open With";
+"Type the name or the path of the application" = "Type the name or the path of the application";
+"to use to open the current selection" = "to use to open the current selection";
+
+/* RunExternalController.m */
+"Run" = "Run";
+"Type the command to execute:"="Type the command to execute:";
+
+
 
 
 
