--- a/GWorkspace/Resources/Spanish.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Spanish.lproj/Localizable.strings
@@ -411,6 +411,11 @@
 
 /* -------- */
 
+/* OpenWithController */
+"Open With" = "Abrir con";
+"Type the name or the path of the application" = "Type the name or the path of the application";
+"to use to open the current selection" = "to use to open the current selection";
+
 /* RunExternalController.m */
 "Run" = "Ejecutar";
 "Type the command to execute:" = "Escribe el comando a ejecutar";
