--- a/GWorkspace/Resources/German.lproj/Localizable.strings
+++ b/GWorkspace/Resources/German.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 ﻿/* GWorkspace German strings, updated by Ingolf Jandt 2006 */
 
-/* ----------------------- menu strings --------------------------- *\
+/* ----------------------- menu strings --------------------------- */
 /* main.m */
 
 "Info" = "Info";
@@ -150,7 +150,7 @@
 "Destroying" = "Vernichte";
 "File Operation Completed" = "Dateioperation vollständig";
 "Backgrounder connection died!" = "Backgrounder-Verbindung gestorben!";
-"Some items have the same name;\ndo you want to sobstitute them?" = "Einige Gegenstände haben den selben Namen;\nwollen Sie diese ersetzen?";
+"Some items have the same name;\ndo you want to sobstitute them?" = "Einige Elemente haben den selben Namen;\nwollen Sie diese ersetzen?";
 "File Operation Error!" = "Fehler bei Dateioperation!";
 
 
@@ -172,8 +172,9 @@ which ends in "kann <the file> nicht umbenennen"
 "Invalid char in name" = "Ungültiges Zeichen im Namen";
 
 
-/* ----------------------- Inspectors strings --------------------------- *\
+/* ----------------------- Inspectors strings --------------------------- */
 
+"Items" = "Elemente";
 
 /* Attributes.m */
 
@@ -235,7 +236,7 @@ which ends in "kann <the file> nicht umbenennen"
 
 
 
-/* ----------------------- Finder strings --------------------------- *\
+/* ----------------------- Finder strings --------------------------- */
 
 /* Finder.m */
 
@@ -246,7 +247,7 @@ which ends in "kann <the file> nicht umbenennen"
 "Current selection" = "Aktuelle Auswahl";
 "Add" = "Hinzufügen ";
 "Remove" = "Entfernen";
-"Search for items whose:" = "Suche für Objekte welche:";
+"Search for items whose:" = "Suche für Elemente welche:";
 "Specific places" = "Bestimmte Orte";
 "Recursive" = "Rekursiv";
 "Search" = "Suche";
@@ -309,7 +310,7 @@ which ends in "kann <the file> nicht umbenennen"
 "includes"="enthält";
 
 
-/* ----------------------- Fiend strings --------------------------- *\
+/* ----------------------- Fiend strings --------------------------- */
 
 /* Fiend.m */
 
@@ -323,7 +324,7 @@ which ends in "kann <the file> nicht umbenennen"
 "This object is already present in this layer!" = "Dieses Objekt existiert bereits in dieser Schicht!";
 	
 			
-/* ----------------------- Preferences strings --------------------------- *\
+/* ----------------------- Preferences strings --------------------------- */
 
 /* PreferencesWin.m */
 
