--- a/GWorkspace/Resources/German.lproj/Localizable.strings
+++ b/GWorkspace/Resources/German.lproj/Localizable.strings
@@ -106,7 +106,7 @@
 
 "Author" = "Autor";
 "GNUstep Workspace Manager" = "GNUstep Workspace Manager";
-"See http://www.gnustep.it/enrico/gworkspace" = "Siehe http://www.gnustep.it/enrico/gworkspace";
+"See http://www.gnustep.it/enrico/gworkspace" = "Siehe https://www.gnustep.org/experience/Gworkspace.html";
 "Released under the GNU General Public License 2.0" = "Veröffentlicht unter der GNU General Public License 2.0";
 "Error" = "Fehler";
 "You have not write permission\nfor" = "Sie haben keine Schreibrechte\nfür";
