--- a/GWorkspace/Resources/Hungarian.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Hungarian.lproj/Localizable.strings
@@ -66,7 +66,7 @@
 /* GWorkspace.m */
 
 "GNUstep Workspace Manager" = "GNUstep fájlkezel?";
-"See http://www.gnustep.it/enrico/gworkspace" = "http://www.gnustep.it/enrico/gworkspace";
+"See http://www.gnustep.it/enrico/gworkspace" = "https://www.gnustep.org/experience/Gworkspace.html";
 "Released under the GNU General Public License 2.0" = "Terjesztési jog: GNU General Public License 2.0";
 "Error" = "Hiba";
 "You have not write permission\nfor" = "Nincs írási jogosultsága \na következ?höz:";
