--- a/GWorkspace/Resources/Norvegian.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Norvegian.lproj/Localizable.strings
@@ -86,7 +86,7 @@
 
 /*"Author" = "Forfatter";*/
 "GNUstep Workspace Manager" = "GNUstep Workspace Manager";
-"See http://www.gnustep.it/enrico/gworkspace" = "Se http://www.gnustep.it/enrico/gworkspace";
+"See http://www.gnustep.it/enrico/gworkspace" = "Se hhttps://www.gnustep.org/experience/Gworkspace.html";
 "Released under the GNU General Public License 2.0" = "Publisert under GNU General Public License 2.0";
 "Error" = "Feil";
 "You have not write permission\nfor" = "Du har ingen skrive-rettigheter\ntil";
