--- a/GWorkspace/Resources/Romanian.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Romanian.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 /* GWorkspace.m */
 
 "GNUstep Workspace Manager" = "Workspace Manager-ul pentru GNUstep";
-"See http://www.gnustep.it/enrico/gworkspace" = "Vezi http://www.gnustep.it/enrico/gworkspace";
+"See http://www.gnustep.it/enrico/gworkspace" = "Vezi https://www.gnustep.org/experience/Gworkspace.html";
 "Released under the GNU General Public License 2.0" = "Publicat sub GNU General Public License 2.0";
 
 "Error" = "Eroare";
